# JetAnalysis

./: CMakeLists.txt  README.md
cmakemodules/: FindFASTJET.cmake  FindROOT.cmake
config/: HadronSpectraFull.xml  HadronSpectraFullParton.xml  HadronSpectraNegative.xml  HadronSpectraNegativeParton.xml  HadronSpectraPositive.xml  HadronSpectraPositiveParton.xml  alice_jet_energy_flow_test.xml  alice_softdrop_conditional_test.xml  atlas_gamma_doublejet.xml  atlas_gamma_doublejet_no_iso.xml  atlas_gamma_tagged_jet_spectra.xml  cms_highestkt_test.xml  cms_jet_energy_flow_test.xml  jet2dstructure_test_hadron.xml  jet2dstructure_test_parton.xml  jet_spec_test.xml  jetshape2d_full_parton.xml  jetshape_ch_hadron.xml  jetshape_ch_hadron_1d.xml  jetshape_full_hadron.xml  jetshape_full_parton.xml  jetshape_full_parton_pgun.xml  jetshape_gluon_parton.xml  jetshape_hardest_particle.xml  jetshape_quark_parton.xml  jetshape_quarkjet.xml  jetshape_test.xml  jetshape_test_beta.xml  rap_dist.xml  rap_dist_neg.xml  rap_dist_pos.xml  test.xml  test_atlas_gamma_doublejet.xml  test_dijet.xml  test_dyngroom.xml  test_quant.xml  test_quant_hadron.xml  test_quant_parton.xml  test_quant_pgun.xml  test_quant_pgun_hadron.xml  (+3 more)
config/ALICE_Groomed/: alice_dynamical_grooming.xml  alice_softdrop.xml  alice_softdrop_conditional.xml  alice_softdrop_ritoban_0005.xml  alice_softdrop_ritoban_2030.xml  alice_softdrop_ritoban_3040.xml
config/ALICE_JetEnergyFlow/: alice_jet_energy_flow_pbpb5020.xml  alice_jet_energy_flow_pp13000.xml  alice_jet_energy_flow_pp13000_vs_data.xml
config/ALICE_JetMass/: jet_mass_charged_pion_mass.xml  jet_mass_charged_pion_mass_ritoban_0005.xml  jet_mass_charged_pion_mass_ritoban_2030.xml  jet_mass_charged_pion_mass_ritoban_3040.xml  softdrop_mg_charged_pion_mass.xml
config/ALICE_JetSpec/: alice_jetspec_biased.xml  alice_jetspec_unbiased.xml
config/ALICE_ktG/: dyngroom_alice_ktg.xml  softdrop_alice_ktg.xml
config/ATLAS_Dijet/: atlas_dijet_pj.xml  atlas_dijet_xj.xml
config/CMS_HardestKt/: cms_hardestkt.xml
config/CMS_JetEnergyFlow/: cms_jet_energy_flow_pbpb5020.xml  cms_jet_energy_flow_pp13000.xml
config/CMS_SoftDrop/: cms_photon_softdrop.xml  cms_photon_softdrop_with_upper_x_cut.xml  cms_softdrop.xml
config/ExtraPythonScripts/: SD_ATLAS.py  SD_ATLAS.yaml  SD_RHIC.yaml  manage_data.py  manage_dir.py
config/HadSpecTest/: had_spec_test.xml
config/JetMassTest/: jet_mass_charged.xml  jet_mass_charged_massless.xml  jet_mass_charged_pion_mass.xml  jet_mass_full.xml  jet_mass_full_parton.xml  softdrop_mg_charged.xml  softdrop_mg_charged_massless.xml  softdrop_mg_charged_pion_mass.xml  softdrop_mg_full.xml  softdrop_mg_full_parton.xml
config/JetShape2D/: cms.xml  cms_loreso.xml  jetshape2d_test1.xml  jetshape2d_test2.xml  jetshape2d_test3.xml
config/JetShapeTest/: jetshape_test.xml  jetshape_test_beta.xml~  jetshape_test_neg.xml  jetshape_test_pos.xml
config/PartonTestPthat130_14/: ff_hadron_before_nsub.xml  ff_hadron_full.xml  ff_parton_bare.xml  ff_parton_before_nsub.xml  ff_parton_full.xml  ff_parton_ripped.xml  jetshape_full_hadron.xml  jetshape_hadron_before_nsub.xml  jetshape_hadron_full.xml  jetshape_parton_bare.xml  (+3 more)
exp_data/: get_data.py  hepdata_list.yaml  load_hepdata_yaml.py
external_packages/: CMakeLists.txt  dyGroomer.h  negative_recombiner.h
for_chathu/: README.md
gen_mixed_ev/: check_job.py  combine_mixed_ev.py  gen_mixed_ev_master.py  gen_mixed_ev_part.py  jetscape_files.py  slurm_sub.py  test.txt
job_sub/: JobMaster  batch_submission.py  edit_xml.py  gen_slurm_sub.py  job_info.yaml  run.py  slurm_sub.py  standard_jetscape_analysis.py
negative_recombiner/: antikt_n.h
plot/: RapDist.ipynb  RapDistInt.ipynb  jet_shape_check_plot.ipynb  partonic_jetshape_plot_q2 copy.ipynb  partonic_jetshape_plot_q2.ipynb  pp_jetshape_mixed_event_plot.ipynb  pp_jetshape_plot.ipynb
src/: CMakeLists.txt  main.cc
src/analysis/: ALICEJetEnergyFlow.cc  ALICEJetEnergyFlow.h  AnalysisModuleTemplete.cc  AnalysisModuleTemplete.h  CMSJetEnergyFlow.cc  CMSJetEnergyFlow.h  Dijet.cc  Dijet.h  DynamicalGroom.cc  DynamicalGroom.h  FragF.cc  FragF.h  HardestKt.cc  HardestKt.h  InconeQuant.cc  InconeQuant.h  JetMass.cc  JetMass.h  JetShape.cc  JetShape.h  JetShape2D.cc  JetShape2D.h  JetShape2DNoMixedEvent.cc  JetShape2DNoMixedEvent.h  JetSpec.cc  JetSpec.h  MixedEvent.cc  MixedEvent.h  MomFracTagJet.cc  MomFracTagJet.h  ParticleSpec.cc  ParticleSpec.h  RapDist.cc  RapDist.h  SoftDropGroom.cc  SoftDropGroom.h  SoftDropGroomConditional.cc  SoftDropGroomConditional.h  TaggedJetPair.cc  TaggedJetPair.h  (+2 more)
src/framework/: AnalysisModuleBase.cc  AnalysisModuleBase.h  AnalysisModuleMixedEvent.cc  AnalysisModuleMixedEvent.h  AnalysisModuleStandard.cc  AnalysisModuleStandard.h  Charged.cc  Charged.h  CombineEvents.cc  CombineEvents.h  ConstPt.cc  ConstPt.h  Constants.h  DeltaPhiCut.cc  DeltaPhiCut.h  EventAnalysis.cc  EventAnalysis.h  FourVector.h  Hist1D.cc  Hist1D.h  Hist2D.cc  Hist2D.h  Histogram.cc  Histogram.h  Isolation.cc  Isolation.h  JetAnalysis.cc  JetAnalysis.h  JetTag.cc  JetTag.h  LeadingParticle.cc  LeadingParticle.h  LegoParticle.cc  LegoParticle.h  LoadFileModuleBase.cc  LoadFileModuleBase.h  MassAdjust.cc  MassAdjust.h  PIdentify.cc  PIdentify.h  (+20 more)
src/load/: JetScapeAscii.cc  JetScapeAscii.h  JetScapeAsciiOneLine.cc  JetScapeAsciiOneLine.h  JetScapeAsciiV2OneLine.cc  JetScapeAsciiV2OneLine.h
src/reconstruction/: NegativeReco.cc  NegativeReco.h  StandardReco.cc  StandardReco.h
src/smear/: Smearing.cc  Smearing.h
src/subtraction/: NaiveNegativeSub.cc  NaiveNegativeSub.h  SubtractionModuleTemplete.cc  SubtractionModuleTemplete.h
test_data/: SigmaHardBin110_120.out
test_data_jet_spec/: JetscapeHadronListBin100_110.out
test_data_particle_spec/: JetscapeHadronListBin100_110.out  JetscapeHadronListBin110_120.out
test_data_photon_jet/: JetscapeHadronListBin100_110.out
test_data_photon_jetpair/: JetscapeHadronListBin100_110.out  SigmaHardBin100_110.out
tinyxml2/: CMakeLists.txt  CMakeLists.txt.sb-b0926de8-DbIe0v
utility_codes/: jetscape_parser.cpp
(+373 files in other folders)
